API docs of User,Post,Command,Vote Model
