# app/Models/Vote.php
@@ -5,7 +5,24 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
-
+/**
+ *
+ * @OA\Schema(
+ * @OA\Xml(name="Vote"),
+ * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="user_id", type="integer", example="1"),
+ * @OA\Property(property="post_id", type="integer", example="1"),
+ * @OA\Property(property="command_id", type="integer", example="1"),
+ * @OA\Property(property="status", type="integer", example="1"),
+ * @OA\Property(property="content", type="string", example="Johnas asdfa asdfasgw"),
+ * @OA\Property(property="created_at", ref="#/components/schemas/BaseModel/properties/created_at"),
+ * @OA\Property(property="updated_at", ref="#/components/schemas/BaseModel/properties/updated_at"),
+ * @OA\Property(property="deleted_at", ref="#/components/schemas/BaseModel/properties/deleted_at")
+ * )
+ *
+ * Class Vote
+ *
+ */
 class Vote extends Model
 {
     use HasFactory;
