# storage/api-docs/api-docs.json
@@ -47,8 +47,12 @@
         },
         "/api/update": {
             "post": {
-                "summary": "Register a new user",
-                "operationId": "App\\Http\\Controllers\\AuthController::update",
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Update",
+                "description": "Update user information",
+                "operationId": "update",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -144,27 +148,27 @@
                 }
             }
         },
-        "/api/posts": {
-            "get": {
+        "/api/logout": {
+            "post": {
                 "tags": [
-                    "posts"
+                    "auth"
                 ],
-                "summary": "post index",
-                "description": "get all post information to show on the post index page",
-                "operationId": "postShow",
-                "requestBody": {
-                    "required": false
-                },
+                "summary": "Logout",
+                "description": "Logout user and invalidate token",
+                "operationId": "logout",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "Returns when user is not authenticated",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "Sorry, wrong email address or password. Please try again"
+                                            "example": "Not authorized"
                                         }
                                     },
                                     "type": "object"
@@ -172,10 +176,15 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
             }
         },
-        "/api/posts/{id}": {
+        "/api/posts": {
             "get": {
                 "tags": [
                     "posts"
@@ -209,6 +218,97 @@
     },
     "components": {
         "schemas": {
+            "BaseModel": {
+                "properties": {
+                    "created_at": {
+                        "description": "Initial creation timestamp",
+                        "type": "string",
+                        "format": "date-time",
+                        "readOnly": "true"
+                    },
+                    "updated_at": {
+                        "description": "Last update timestamp",
+                        "type": "string",
+                        "format": "date-time",
+                        "readOnly": "true"
+                    },
+                    "deleted_at": {
+                        "description": "Soft delete timestamp",
+                        "type": "string",
+                        "format": "date-time",
+                        "readOnly": "true"
+                    }
+                },
+                "type": "object"
+            },
+            "Command": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "readOnly": "true",
+                        "example": "1"
+                    },
+                    "user_id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "post_id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "content": {
+                        "type": "string",
+                        "example": "Johnas asdfa asdfasgw"
+                    },
+                    "created_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/created_at"
+                    },
+                    "updated_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/updated_at"
+                    },
+                    "deleted_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/deleted_at"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Command"
+                }
+            },
+            "Post": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "readOnly": "true",
+                        "example": "1"
+                    },
+                    "user_id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "title": {
+                        "type": "string",
+                        "example": "John"
+                    },
+                    "content": {
+                        "type": "string",
+                        "example": "Johnas asdfa asdfasgw"
+                    },
+                    "created_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/created_at"
+                    },
+                    "updated_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/updated_at"
+                    },
+                    "deleted_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/deleted_at"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Post"
+                }
+            },
             "User": {
                 "required": [
                     "password"
@@ -237,11 +337,62 @@
                         "format": "date-time",
                         "readOnly": "true",
                         "example": "2019-02-25 12:59:20"
+                    },
+                    "created_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/created_at"
+                    },
+                    "updated_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/updated_at"
+                    },
+                    "deleted_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/deleted_at"
                     }
                 },
                 "type": "object",
                 "xml": {
                     "name": "User"
+                }
+            },
+            "Vote": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "readOnly": "true",
+                        "example": "1"
+                    },
+                    "user_id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "post_id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "command_id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "status": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "content": {
+                        "type": "string",
+                        "example": "Johnas asdfa asdfasgw"
+                    },
+                    "created_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/created_at"
+                    },
+                    "updated_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/updated_at"
+                    },
+                    "deleted_at": {
+                        "$ref": "#/components/schemas/BaseModel/properties/deleted_at"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Vote"
                 }
             }
         }
